--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^7.0.1",
+    "morgan": "~1.9.1",
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.17.0",
+    "method-override": "^3.0.0",
+    "mongoose-seed": "^0.6.0"
   }
 }
