--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "express-session": "^1.17.0",
     "method-override": "^3.0.0",
-    "mongoose-seed": "^0.6.0"
+    "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.2"
   }
 }
